Update API URL